# Mathwork

./: CMakeLists.txt  Makefile  main.c
.github/workflows/: cppcheck.yml
include/: sensor.h  utils.h
src/: sensor.c  utils.c
tests/: test_main.cpp
